# aoc

./: .gitignore  go.mod
2018/: README.md  x2018.cabal
2018/d02/: main.hs
2018/d03/: .#main.hs
2018/d04/: main.hi
2018/docker/: bashrc.local.sh  build-docker-haskell.sh  run-docker-haskell.sh
2018/oldTry/: misi-kerdesek.org
2018/oldTry/d01/: main.hs
2018/oldTry/d03/: main.hs
2018/oldTry/d04/: main.hs
2018/oldTry/docker/: Dockerfile
2018/playground/: Gentle.hs  GentleTree.hs  GentleTreeMain.hs  GentleTreeSpec.hs  factorial.hs
2019/: go.mod  go.sum
2019/clean/d22/: main.go
2019/d01/: main.go
2019/d07p2/: main.go
2019/d13/: main.go
2019/d13-v2/: main.go
2019/d15/: main.go
2019/d20/: main.go
2019/d23/d21/: main.go
2019/d25/: log-17-11.txt  main.go  tee-log-b.txt  tee-log.txt
2019/d25/oldlogs/: log-15-19.txt  log-16-43.txt  log-16-49.txt  log-21-19.txt  log-21-23.txt  log-21-35.txt
2020/: README.md
2020/clean/d22/: main_test.go
2020/clean/d25/: autoplayer.go
2020/clean/d25/data/: default-commands.txt
2020/d01/: main.py
2020/d01p2/: main.go
2020/d02/: main.py
2020/d03/: main.py
2020/d04/: main.py
2020/d05/: main.py
2020/d06/: main-improved.py  main.go  main.py
2020/d07/: main.py
2020/d08/: main.py
2020/d09/: main-improved.py  main.go  main.py
2020/d10/: main.go  main.py
2020/d11/: main.go  main.py
2020/d12/: main.py
2020/d13/: main-improved.py  main.py
2020/d14/: main.go  main.py
2020/d15/: main.py
2020/d16/: main.go  main.py
2020/d17/: main.go  main.py
2020/d18/: main-improved.py  main.py  sample.txt
2020/d19/: input2.txt  main.py
2020/d20/: a.txt  main-p1.py
2020/d21/: main.py
2020/d22/: main.go  main.py
2020/d23/: main.py
2020/d24/: main.go
2020/d25/: log-17-07.txt  solution.txt
2020/d25/oldlogs/: log-14-37.txt  log-14-44.txt  log-16-05.txt  log-16-35.txt  log-21-04.txt  log-21-05.txt  log-21-21.txt  log-21-25.txt
2021/playground/: learning.md
2021/playground/eloquent/02/: tstriangle.js  tstriangle.ts
2021/playground/eloquent/03/: bcounter.js  even.js  minimum.js
2021/playground/eloquent/04/: flatten.js  loop.js
2021/playground/eloquent/05/: every.js
2021/playground/eloquent/06/: playground.js  playground2.js  playground3.js  playground4.js
2021/playground/react/reacttut/: package-lock.json  package.json
2021/playground/react/simplereact/: index.html  my.js  package.json
2021/solutions/: README.md  index.html  package-lock.json  package.json  tsconfig.json
2021/solutions/src/: fakeReact.mjs  fakeReactDOM.mjs  main.ts  util.ts  web.tsx
2023/: README.md  questinos.md
2023/d00/: input.txt  main.kt
2023/d01/: main.kt
2023/d02/: main.kt
2023/d03/: main.kt
2024/d01/: main  main.cc
2024/d02/: main.cc
2024/d03/: main.cc
2024/d04/: main.cc
2024/d05/: main.cc
2024/d06/: main.cc
2024/d07/: main.cc
2024/d08/: main.cc
2024/d09/: main.cc
2024/d10/: main.cc
2024/d11/: main.cc
2024/d12/: main.cc
2024/d13/: main.cc
2024/d14/: main.cc  output.txt  t894.txt  t997.txt
2024/d15/: main.cc
2024/d16/: main.cc
2024/d17/: main.cc
2024/d18/: main.cc
2024/d19/: main.cc
2024/d20/: main.cc
2024/d21/: 22.txt  23.txt  main.cc
2024/d22/: main.cc
2024/d23/: main.cc
2024/d24/: main.cc
2024/d25/: main.cc
2025/: .gitignore  aoc2025.cabal
2025/d01/: Main.hs  example2.txt  main.lobster  mainV1.lobster
2025/d02/: Main.hs  main.lobster
2025/d03/: Main.hs
2025/d04/: Main.hs
2025/d05/: Main.hs
2025/d06/: Main.hs
2025/d07/: Main.hs
2025/d08/: Main.hs
2025/lobster/d01/: main.lobster
2025/lobster/d02/: main.lobster
2025/lobster/d03/: main.lobster
2025/util/: Util.hs
clean/computer/: computer.go
clean/d25/: cmdreader.go  main.go
clean/logutil/: logutil.go
d02/: main.go
d03/: main.go
d04/: main.go
d05/: main.go
d07/: main.go
d08/: main.go
d12/: main.go
d13/: main.go
d18/: main.go
d19/: main.go
d21/: main.go
d25/: log-17-19.txt  main.go
d25/oldlogs/: log-15-23.txt  log-15-25.txt  log-15-28.txt  log-15-29.txt  log-16-06.txt  log-16-24.txt  log-16-36.txt  log-21-26.txt  log-21-27.txt  log-21-33.txt
(+26 files in other folders)
