cabal-version:      3.0
name:               x2018
version:            0.1.0.0

-- Playground to learn haskell:

license:            NONE

build-type:         Simple

common warnings
    ghc-options: -Wall

executable x2018
    -- import:           warnings

    main-is:          helloworld.hs

    -- Modules included in this executable, other than Main.
    other-modules: Gentle, GentleTree

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.18.3.0

    -- Directories containing source files.
    hs-source-dirs:   playground/

    -- Base language which the package is written in.
    default-language: Haskell2010

executable gentletree
    main-is:          GentleTree.hs
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   playground/
    default-language: Haskell2010
