cabal-version:      3.0
name:               x2018
version:            0.1.0.0

-- Playground to learn haskell:

license:            NONE

build-type:         Simple

common warnings
    ghc-options: -Wall
    default-extensions: InstanceSigs
    default-language: Haskell2010
    build-depends: base ^>=4.18.3.0

executable x2018
    -- import:           warnings

    main-is:          helloworld.hs

    -- Modules included in this executable, other than Main.
    other-modules: Gentle, GentleTree

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.18.3.0

    -- Directories containing source files.
    hs-source-dirs:   playground/

    -- Base language which the package is written in.
    default-language: Haskell2010

executable gentletree
    -- import:           warnings
    main-is:          GentleTreeMain.hs
    other-modules:    GentleTree
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   playground/
    default-language: Haskell2010
    default-extensions: InstanceSigs

test-suite gentletree-test
    -- import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          GentleTreeSpec.hs
    build-depends:    base ^>=4.18.3.0, hspec
    hs-source-dirs:   playground/
    other-modules:    GentleTree
    default-language: Haskell2010
