cabal-version:      3.0
name:               aoc2025
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
author:             Csaba Andras
maintainer:         acsaba@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable d01
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   d01
    default-language: GHC2021
