cabal-version:      3.0
name:               aoc2025
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
author:             Csaba Andras
maintainer:         acsaba@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall
    default-language: GHC2021

library
    import:           warnings
    hs-source-dirs:   util
    exposed-modules:  Util
    build-depends:    base ^>=4.18.3.0

executable d01
    import:           warnings
    hs-source-dirs:   d01
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0

executable d02
    import:           warnings
    hs-source-dirs:   d02
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0, extra, aoc2025

executable d03
    import:           warnings
    hs-source-dirs:   d03
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0, extra, aoc2025

executable d04
    import:           warnings
    hs-source-dirs:   d04
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0, extra, aoc2025, array
